<resources>
    <string name="skip_intro">skip_intro</string>
    <string name="next">next</string>
    <string name="app_name">CafeManagementSystem</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>

    <array name="Time">
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
    </array>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>